Completed create meeting box; still need to fix spacing

--- a/src/components/CreateMeeting.css
+++ b/src/components/CreateMeeting.css
@@ -1,12 +1,179 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 .create-meeting-box {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     margin-right: 200px; /* To align with heading content */
     margin-top: 100px;
     width: 550px;
     height: 600px;
     border: 3px solid #D9D9D9;
     border-radius: 30px;
+}
+
+.meeting-box-header {
+    display: flex;
+    align-items: center;
+    height: 90px;
+    width: 100%;
+    background-color: #0040B4;
+    border-top-left-radius: 27px;
+    border-top-right-radius: 27px;
+    color: white;
+}
+
+.meeting-title-input {
+    border: none;           
+    outline: none;         
+    background: none;
+    height: 90px; 
+    width: 100%;      
+    font-family: "Inter", sans-serif;
+    font-size: 40px;        
+    font-weight: 500;
+    margin-left: 20px;
+    margin-bottom: 0px;
+    color: white !important;
+}
+
+.meeting-title-input::placeholder {
+    color: white;
+}
+
+.edit-icon {
+    height: 45px;
+    margin-right: 30px;
+}
+
+.meeting-description-text {
+    margin-left: 35px;
+    font-size: 18px;
+    margin-top: 20px;
+    color: #373737;
+}
+
+.meeting-description-input {
+    width: 470px;
+    height: 70px;
+    font-family: "Inter", sans-serif;
+    font-size: 14px;
+    border: 2px solid #E0E0E0;
+    border-radius: 8px;
+    padding: 10px;
+    cursor: text;
+    resize: none;
+}
+
+.meeting-times {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.meeting-time-input {
+    width: 110px;
+    margin-left: 20px;
+    margin-right: 20px;
+    cursor: pointer;
+}
+
+.meeting-time-input .react-select__control {
+    /* What you see when not in menu */
+    border: 2px solid #E0E0E0;
+    border-radius: 8px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.meeting-time-input .react-select__menu { 
+    /* Menu behind options */
+    font-size: 14px; /* Adjust the font size of the dropdown items */
+    height: 150px; /* Adjust the height of the control box */
+    cursor: pointer;
+}
+
+.meeting-time-input .react-select__menu-list {
+    /* List of options */
+    font-size: 14px; 
+    height: 150px; 
+    cursor: pointer;
+}
+
+.meeting-time-input .react-select__option { 
+    /* Actual dropdown option */
+    font-size: 14px; 
+    cursor: pointer;
+}
+
+.react-select__option:hover {
+    background-color: #E0E0E0;
+}
+
+.react-select__option--is-selected {
+    background-color: #0040B4 !important;
+    color: white;
+}
+
+.react-select__option:active {
+    background-color: #828282 !important;
+    color: white;
+}
+
+.invites {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 10px;
+}
+
+.invite-input {
+    width: 220px;
+}
+
+.meeting-recurring {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.recurring-checkbox {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 8px;
+    border: 2px solid #E0E0E0;
+    border-radius: 7px;
+    cursor: pointer;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 10px;
+}
+
+.recurring-checkbox:checked {
+    background-color: #0040B4; /* Change background color when checked */
+}
+
+.create-meeting-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    width: 350px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background-color: #0040B4;
+    font-family: 'Inter', sans-serif;
+    color: white;
+}
+
+.create-meeting-button:hover {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    border: 3px solid #0040B4;
+    color: #0040B4;
 }
